Fix built-in image size/alignment overriding by intrinsic-ratio

--- a/css/lazysizes.css
+++ b/css/lazysizes.css
@@ -23,6 +23,7 @@
 .intrinsic-ratio-box {
     position: relative;
     display: block;
+    width: 100%;
 }
 
 .intrinsic-ratio-helper {
